Refactor: - disabilitato onBackPressed() nella Splash - eliminati gli xml dei menu inutilizzati - portrait a tutte le activity - aggiunto tema Holo senza ActionBar per l'activity FirstAccess - rimosse stringhe inulizzate dal file strings.xml - refactor completo dell'activity FirstAccess - piccole modifiche al TwoPlayer